--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body, html {
 .segment {
     background-color: orange;
     position: absolute;
+    transform: translate(-50%, -50%);
     width: 1vw;
     height: 1vw;
 }
