--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body, html {
 
 .segment {
     background-color: orange;
+    border: 1px solid black;
     position: absolute;
     transform: translate(-50%, -50%);
     width: 1vw;
