Hidden area overflow

--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ body, html {
     background-color: green;
     border: 5px solid rgb(83, 78, 78);
     border-radius: 10px;
+    overflow: hidden;
     width: 90vh;
     height: 90vh;
     margin: auto;
